

- Fixed bug in demarshaller (off by 1 error)
- Passing flag to bluesimargs


----------
mcadler     Date: Wed Apr 30 00:26:00 EDT 2008  CSN: CSN-platforms-109
                  Wed Apr 30 04:26:00 UTC 2008


Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/unix-pipe
 unix-pipe-device.cpp      Locally Modified          108 

Use new bluesim argument vector.

----------
mcadler     Date: Wed Apr 30 08:35:33 EDT 2008  CSN: CSN-platforms-110
                  Wed Apr 30 12:35:33 UTC 2008


Directory config/pm/hasim/submodels/fpgaenv
 hasim-fpgaenv-hybrid-sim.apm Locally Modified          109 
 hasim-fpgaenv-htg-v5-pcie.apm Locally Modified          109 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/memory/null
 memory_virtual_device_null.awb Locally Modified          109 
 memory_virtual_device_null.bsv Locally Modified          109 
 memory_virtual_device_datatypes.bsv Locally Modified          109 

Change the names of types in scratchpad memory so they don't conflict with
functional partition memory.  It is no longer necessary to change the
sizes of the null scratchpad memory to conform to the functional memory
service sizes.

----------
mcadler     Date: Fri May  2 16:57:44 EDT 2008  CSN: CSN-platforms-111
                  Fri May  2 20:57:44 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/rrr/basic
 basic-rrr-common.bsh      Locally Modified          110 

Add a few Bluespec types for passing 72, 96 and 128 bit objects through RRR.
These can go away when we solve type specification for RRR.  Types are:
UMF_UINT72, UMF_UINT96 and UMF_UNIT128.

----------
jsemer      Date: Mon May  5 11:55:00 EDT 2008  CSN: CSN-platforms-112
                  Mon May  5 15:55:00 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/rrr/null
 null-rrr.bsv              Locally Modified          111 

Updated null RRR modules to conform to latest version of the RRR
interface.