@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-112
+CSN=CSN-platforms-113
 Dependencies=hasim/HEAD
